manifests/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rickmorthumali1
  labels:
    app: rickmorthumali1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rickmorthumali1
  template:
    metadata:
      labels:
        app: rickmorthumali1
    spec:
      containers:
      - image: .azurecr.io/k8sdemo:5d361e0caae4f4c37b1f5c6a3644a87ad36c724e
        imagePullPolicy: IfNotPresent
        name: rickmorthumali1
        ports:
        - containerPort: 8080
          protocol: TCP
