manifests/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rickmorthumali1-internal-service
spec:
  type: LoadBalancer 
  selector:
    app: rickmorthumali1
  ports:
      port: 8080
      targetPort: 8080
